# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")
import("//build/test.gni")
config("audio_utils_public_config") {
  include_dirs = [ "./include" ]

  cflags_cc = [ "-std=c++20" ]
}

ohos_shared_library("audio_definitions") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  public_configs = [ ":audio_utils_public_config" ]
  install_enable = true
  include_dirs = [
    "./include",
    "../../../frameworks/native/audioutils/include",
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../services/audio_policy/common/include",
  ]

  deps = [ "../audioutils:audio_utils" ]

  sources = [
    "../../../services/audio_policy/server/domain/device/src/audio_device_descriptor.cpp",
    "./src/audio_pipe_info.cpp",
    "./src/audio_stream_descriptor.cpp",
  ]

  public_external_deps = [ "bounds_checking_function:libsec_shared" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  defines = []

  if (build_variant == "user") {
    defines += [ "AUDIO_BUILD_VARIANT_USER" ]
  } else if (build_variant == "root") {
    defines += [ "AUDIO_BUILD_VARIANT_ROOT" ]
  }

  if (audio_framework_feature_detect_soundbox) {
    defines += [ "DETECT_SOUNDBOX" ]
  }

  subsystem_name = "multimedia"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "audio_framework"
}

ohos_unittest("audio_definitions_unit_test") {
  module_out_path = "audio_framework/audio_framework_route/audiodefinitions"

  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  include_dirs = [
    "./test/unittest",
    "../../../frameworks/native/audioutils/include",
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../services/audio_policy/common/include",
  ]

  sources = [
    "test/unittest/audio_definitions_unit_test_utils.cpp",
    "test/unittest/audio_stream_descriptor_unit_test.cpp",
    "test/unittest/audio_pipe_info_unit_test.cpp",
  ]

  deps = [ 
    ":audio_definitions",
    "../audioutils:audio_utils"
  ]

  defines = []

  external_deps = [
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
    "init:libbegetutil",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}
