# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

ohos_shared_library("audio_inner_call") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  install_enable = true
  include_dirs = [ "./include" ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  cflags_cc = cflags
  cflags_cc += [ "-std=c++23" ]

  sources = [ "./src/audio_inner_call.cpp" ]

  subsystem_name = "multimedia"
  part_name = "audio_framework"
}
