# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")
import("../../../ressche_part.gni")
import("//build/test.gni")

ohos_shared_library("audio_qosmanager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }

  include_dirs = [
    "include",
    "../audioschedule/include",
    "../audioutils/include",
    "../../../interfaces/inner_api/native/audiocommon/include",
  ]

  sources = [ "audio_qosmanager.cpp" ]

  cflags = []
  deps = []
  external_deps = []

  if (ressche_enable == true) {
    deps += [ "../audioschedule:audio_schedule" ]
    external_deps += [ "qos_manager:concurrent_task_client" ]
    external_deps += [ "qos_manager:qos" ]
    external_deps += [
      "c_utils:utils",
      "hilog:libhilog",
      "init:libbegetutil",
      "ipc:ipc_single",
    ]
    cflags += [ "-DQOSMANAGER_ENABLE" ]
  }

  cflags_cc = cflags
  cflags_cc += [ "-std=c++20" ]
  ldflags = [ "-Wl,--exclude-libs=All" ]

  subsystem_name = "multimedia"
  part_name = "audio_framework"
}

ohos_unittest("audio_qosmanager_unit_test") {
  module_out_path = "audio_framework/audio_framework_route/audioqosmanager"

  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  include_dirs = [
    "include",
    "../audioschedule/include",
    "../audioutils/include",
    "../../../interfaces/inner_api/native/audiocommon/include",
  ]

  sources = [
    "test/unittest/audio_qosmanager_unit_test.cpp",
  ]

  deps = [ 
    ":audio_qosmanager",
    "../audioutils:audio_utils"
  ]

  defines = []

  external_deps = [
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}