# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

ohos_executable("pa_stream_test") {
  install_enable = false
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags = [
    "-Wall",
    "-Werror",
  ]

  include_dirs = [
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../services/audio_service/test/example",
  ]

  sources = [ "./pa_stream_test.cpp" ]

  deps = [
    "../audiocapturer:audio_capturer",
    "../audiorenderer:audio_renderer",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
